src/main/java/com/example/demo/entity/error/ContactError.java
package com.example.demo.entity.error;

public enum ContactError {
	ID_REQUIRED, NAME_REQUIRED, SURNAME1_REQUIRED, SURNAME2_REQUIRED, PHONE_REQUIRED, EMAIL_REQUIRED,
	CONTACT_NOT_EXISTS, CONTACT_ALREADY_EXISTS, CONTACT_CONSTRAINT_VIOLATION;
}
